tests/miz/fail/types/fail_type_elaboration_mixed_reserve_gap_001.miz
import parser.type_fixtures;
reserve x for set;
reserve y for non empty set;
